k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pawid
  labels:
    app: pawid
    environment: production
