k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: pawid
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: mihajlovb/pawid-backend:c0614255d4cf1f753ee292d71faf31d35ebe33cd
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: uploads-storage
              mountPath: /app/uploads
          readinessProbe:
            httpGet:
              path: /api/dogs
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/dogs
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 20
      volumes:
        - name: uploads-storage
          persistentVolumeClaim:
            claimName: uploads-pvc
