k8s/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: pawid
spec:
  serviceName: postgres-service
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
        role: primary
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
            - name: init-scripts
              mountPath: /docker-entrypoint-initdb.d
            - name: replication-config
              mountPath: /etc/postgresql/conf.d
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "pawid", "-d", "pawid"]
            initialDelaySeconds: 10
            periodSeconds: 5

      volumes:
        - name: init-scripts
          configMap:
            name: postgres-replication-config
            defaultMode: 0755
            items:
              - key: init-replication.sh
                path: init-replication.sh
        - name: replication-config
          configMap:
            name: postgres-replication-config
            items:
              - key: postgresql.conf
                path: replication.conf

  volumeClaimTemplates:
    - metadata:
        name: postgres-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
